--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,10 @@
 [tox]
-envlist = py27,py33
+envlist = py27,py33,docs
 [testenv]
 commands=python setup.py test
+[testenv:docs]
+changedir=docs
+deps=sphinx
+whitelist_externals=make
+commands=make clean
+    make html
