--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-setuptools (19.4)
-Sphinx (1.3.5)
-tox (2.3.1)
-virtualenv (14.0.6)
-wheel (0.26.0)
+coverage==4.3.4
+flake8==3.3.0
+Sphinx==1.5.3
+tox==2.6.0
+twine==1.8.1
+wheel==0.29.0
