--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
-# Config file for automatic testing at travis-ci.org
-
+sudo: false
 language: python
+install: pip install tox
+script: tox
 
-python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-
-install: pip install -r requirements.txt
-
-script: python setup.py test
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py27
+    - python: 3.4
+      env: TOXENV=py34
+    - python: 3.5
+      env: TOXENV=py35
+    - python: 3.6
+      env: TOXENV=py36
+    - python: 3.6
+      env: TOXENV=pep8
+    - python: 3.6
+      env: TOXENV=docs
+    - python: 3.6
+      env: TOXENV=packaging
