--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,39 @@
 [tox]
-envlist = py27,py33,py34,py35,docs
+envlist = py27, py34, py35, py36, pep8, docs, packaging
+
 [testenv]
-commands=python setup.py test
+whitelist_externals = make
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}/zhon
+commands = make test
+deps = -r{toxinidir}/requirements.txt
+
+[testenv:pep8]
+whitelist_externals = make
+deps =
+    flake8
+    pep8-naming
+    flake8-blind-except
+    flake8-builtins
+    flake8-pep3101
+    flake8-string-format
+commands = make lint
+
 [testenv:docs]
-changedir=docs
-deps=sphinx
-whitelist_externals=make
-commands=make clean
+changedir = docs
+deps =
+    sphinx
+    releases
+whitelist_externals = make
+commands =
+    make clean
     make html
+    make linkcheck
+
+[testenv:packaging]
+deps =
+    check-manifest
+    readme_renderer
+commands =
+    check-manifest
+    python setup.py check -m -r -s
