--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ classifiers = [
 
 [project.urls]
 Documentation = "https://tsroten.github.io/zhon"
-Changes = "https://tsroten.github.io/zhon/history.html
+Changes = "https://tsroten.github.io/zhon/history.html"
 "Issue Tracker" = "https://github.com/tsroten/zhon/issues"
 "Source Code" = "https://github.com/tsroten/zhon"
 
