--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ description = "Zhon provides constants used in Chinese text processing."
 readme = "README.rst"
 license = "MIT"
 authors = [
-    { name = "Thomas Roten", email = "thomas@roten.us" },
+    { name = "Thomas Roten" },
 ]
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 keywords = [
     "chinese",
     "mandarin",
@@ -38,11 +38,11 @@ classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Text Processing :: Linguistic",
 ]
@@ -94,7 +94,7 @@ run = [
 ]
 
 [[tool.hatch.envs.test.matrix]]
-python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
+python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
 [tool.hatch.envs.style]
 detached = true
